# agui-fastapi-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: config.py  main.py
app/agents/: base.py  research.py  router.py
app/agui/: emitter.py  state.py
app/api/: routes.py
app/context/: document_store.py  redis_session_store.py  session_store.py
app/guardrails/: __init__.py  base.py  output_filter.py
app/schemas/: documents.py  messages.py  requests.py  search.py  state.py
app/tools/: base.py  document_qa_tool.py  search_tool.py
app/tracing/: __init__.py  base.py  langfuse.py  noop.py  provider.py
tests/: test_cancellation.py  test_conversation_history.py  test_document_qa_tool.py  test_output_filter.py  test_redis_session_store.py  test_routes.py  test_search_tool.py  test_session_store.py  test_tracing.py
