[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agui-fastapi-template"
version = "0.1.0"
description = "AG-UI-compatible FastAPI agent backend template"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "jsonpatch>=1.33",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "slowapi>=0.1.9",
    "tavily-python>=0.3.3",
    # Document QA dependencies
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pypdf>=4.2.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
